--- a/week6_第一組.ipynb
+++ b/week6_第一組.ipynb
@@ -161,6 +161,37 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OprkgASvRypg",
+        "colab_type": "code",
+        "outputId": "814fa18f-6079-4d78-c97f-27776415dc43",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        }
+      },
+      "source": [
+        "test=input(\"請輸入一行英文句子?\")\n",
+        "print(\"將英文句子以空白字元切割後，獲得單字為\",test.split(\" \"))\n",
+        "print(\"以空白字元結合所有單字後,獲得句子為\",test)\n",
+        "print(\"將每個單字字首轉大寫後,獲得句子為\",test.title())"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "請輸入一行英文句子?an apple a day keeps the doctor away\n",
+            "將英文句子以空白字元切割後，獲得單字為 ['an', 'apple', 'a', 'day', 'keeps', 'the', 'doctor', 'away']\n",
+            "以空白字元結合所有單字後,獲得句子為 an apple a day keeps the doctor away\n",
+            "將每個單字字首轉大寫後,獲得句子為 An Apple A Day Keeps The Doctor Away\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
