--- a/week6_第一組.ipynb
+++ b/week6_第一組.ipynb
@@ -84,6 +84,37 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "SkduIiRagiWY",
+        "colab_type": "code",
+        "outputId": "391adf3e-ed8b-4d1a-e05f-0f747d098613",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        }
+      },
+      "source": [
+        "import math\n",
+        "number=int(input(\"請輸入座號？\"))\n",
+        "x=number\n",
+        "y=x/5\n",
+        "group=math.ceil(y)\n",
+        "print(\"組別為\",group)\n"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "請輸入座號？19\n",
+            "組別為 4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "3Ovw6_mccp1Y",
         "colab_type": "code",
         "outputId": "1dd872aa-04ef-4ab1-c0d2-b2a79a9340ba",
@@ -123,29 +154,38 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SkduIiRagiWY",
+        "id": "TSC4yPPlwnlX",
         "colab_type": "code",
-        "outputId": "391adf3e-ed8b-4d1a-e05f-0f747d098613",
+        "outputId": "fee90350-089a-4105-f860-ea1e28c633d3",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 153
         }
       },
       "source": [
-        "import math\n",
-        "number=int(input(\"請輸入座號？\"))\n",
-        "x=number\n",
-        "y=x/5\n",
-        "group=math.ceil(y)\n",
-        "print(\"組別為\",group)\n"
+        "\n",
+        "print(\"1KB=\",2**10,\"Byte\")\n",
+        "print(\"1MB=\",2**20,\"Byte\")\n",
+        "print(\"1GB=\",2**30,\"Byte\")\n",
+        "print(\"1TB=\",2**40,\"Byte\")\n",
+        "print(\"1PB=\",2**50,\"Byte\")\n",
+        "print(\"1EB=\",2**60,\"Byte\")\n",
+        "print(\"1ZB=\",2**70,\"Byte\")\n",
+        "print(\"1YB=\",2**80,\"Byte\")\n"
       ],
       "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "請輸入座號？19\n",
-            "組別為 4\n"
+            "1KB= 1024 Byte\n",
+            "1MB= 1048576 Byte\n",
+            "1GB= 1073741824 Byte\n",
+            "1TB= 1099511627776 Byte\n",
+            "1PB= 1125899906842624 Byte\n",
+            "1EB= 1152921504606846976 Byte\n",
+            "1ZB= 1180591620717411303424 Byte\n",
+            "1YB= 1208925819614629174706176 Byte\n"
           ],
           "name": "stdout"
         }
